# ideal-amplification-mcp

./: README.md  pyproject.toml
ologs/: ideal_amplification.olog.yaml  microscopy_aesthetics.olog.yaml  microscopy_aesthetics_amplification.olog.yaml
src/ideal_amplification_mcp/: __init__.py  server.py
